--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  width: 100%;
 }
 
 .tier-free {
@@ -66,12 +67,12 @@
   border: 2px solid black;
 }
 
-.tier-pro {
+.tier-standard {
   display: flex;
   border: 2px solid black;
 }
 
-.tier-mega {
+.tier-premium {
   display: flex;
   border: 2px solid black;
 }
