--- a/src/App.css
+++ b/src/App.css
@@ -60,19 +60,52 @@
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
+  justify-content: space-between;
+  /* I think there is no space inbetween the tiers because the sign
+    in box is limited in space 
+  */
 }
 
 .tier-free {
   display: flex;
   border: 2px solid black;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
 }
+
+.free-notes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 
 .tier-standard {
   display: flex;
   border: 2px solid black;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
 }
+
+.standard-notes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 .tier-premium {
   display: flex;
   border: 2px solid black;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+.premium-notes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
