--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,19 @@
   border: 2px solid black;
 }
 
+.form-container {
+  display: flex;
+  flex-direction: column ;
+  justify-content: center;
+}
+
+.user-signup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 .tier-container {
   display: flex;
   flex-direction: row;
